<resources>
    <string name="app_name">Verleihplattform</string>
    <string name="editText_Benutzernamme">Benutzername</string>
    <string name="editText_Passwort">Passwort</string>
    <string name="button_Login">Login</string>
    <string name="button_Ausleihen">Ausleihen</string>
    <string name="button_Verleihen">Verleihen</string>
    <string name="button_Dienstleistung">Service</string>
    <string name="button_Gegenstand">Gegenstand</string>
    <string name="VerleihGegenstandTextView">Gegenstand</string>
    <string name="VerleihDienstleistungTextView">Dienstleistung</string>
    <string name="button_submitDienstleistung">weiter</string>
    <string name="editText_AdresseVDienst">Adresse und Hausnr.</string>
    <string name="editText_PLZVDienst">PLZ</string>
    <string name="VDienstOrtAutoTextView">Ort</string>
    <string name="editText_VDienstDatumVon">Zeitraum von</string>
    <string name="editText_VDienstDatumBis">bis</string>
    <string name="AusleihGegenstandTextView">Gegenstand</string>
    <string name="editText_VGegenstandAdresse">Adresse und Hausnr.</string>
    <string name="editText_VGegenstandPLZ">PLZ</string>
    <string name="VGegenstandOrtAutoTextView">Ort</string>
    <string name="textView_AngebotErstellt">Das Angebot wurde erstellt!</string>
    <string name="button_AngebotErstelltHome">zurück zu Home</string>
    <string name="title_activity_meine_items">MeineItemsActivity</string>
    <string name="title_activity_von_mir_ausgeliehen">VonMirAusgeliehenActivity</string>

</resources>
